# ges-code

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING_GES  README.md  createallprojects  createallprojects.bat  creategameprojects  creategameprojects.bat  deploy_ges.bat  ges.workspace  runges.sh  runmake.sh  vpcgen.py
game/: CMakeLists.txt
game/client/: achievement_notification_panel.cpp  achievement_notification_panel.h  c_ai_basenpc.h  c_baseanimating.cpp  c_basecombatweapon.cpp  c_baseentity.cpp  c_baseentity.h  c_baseplayer.cpp  c_baseviewmodel.cpp  c_effects.cpp  c_env_projectedtexture.cpp  c_gib.cpp  c_impact_effects.cpp  c_playerlocaldata.h  c_playerresource.cpp  c_sceneentity.cpp  c_slideshow_display.cpp  c_soundscape.cpp  c_steamjet.cpp  c_te_dynamiclight.cpp  c_te_explosion.cpp  c_te_legacytempents.cpp  c_te_legacytempents.h  c_team.cpp  c_team.h  c_vote_controller.cpp  c_world.cpp  cam_thirdperson.cpp  cam_thirdperson.h  cdll_bounded_cvars.cpp  cdll_client_int.cpp  client_base.vpc  client_ges.vpc  clientmode_shared.cpp  clientmode_shared.h  clientshadowmgr.cpp  clientsideeffects.cpp  clientsideeffects.h  fx_quad.cpp  history_resource.cpp  (+31 more)
game/client/ShaderEditor/: SEdit_ModelRender.cpp  ShaderEditorSystem.cpp
game/client/game_controls/: MapOverview.cpp  SpectatorGUI.cpp  basemodel_panel.h  baseviewport.cpp  vguitextwindow.cpp
game/client/ges/: c_ge_capturearea.cpp  c_ge_door_interp.cpp  c_ge_gameplayresource.cpp  c_ge_gameplayresource.h  c_ge_player.cpp  c_ge_player.h  c_ge_point_follower.cpp  c_ge_radarresource.cpp  c_ge_radarresource.h  c_gemp_player.cpp  c_gemp_player.h  c_npc_gebase.cpp  c_npc_gebase.h  clientmode_ge.cpp  clientmode_ge.h  ge_materialproxies.cpp  ge_musicmanager.cpp  ge_musicmanager.h  ge_screeneffects.cpp  ge_screeneffects.h  ge_vieweffects.cpp  ge_vieweffects.h
game/client/hl2/: c_basehlplayer.cpp  c_basehlplayer.h  c_info_teleporter_countdown.cpp  clientmode_hlnormal.cpp  fx_hl2_impacts.cpp  hud_ammo.cpp  hud_autoaim.cpp  hud_battery.cpp  hud_filmdemo.cpp  hud_flashlight.cpp  hud_hdrdemo.cpp  hud_health.cpp  hud_poisondamageindicator.cpp  hud_quickinfo.cpp  hud_suitpower.cpp  hud_weaponselection.cpp
game/client/hl2mp/: c_hl2mp_player.cpp  c_hl2mp_player.h  clientmode_hl2mpnormal.cpp  clientmode_hl2mpnormal.h  hl2mp_hud_chat.cpp  hl2mp_hud_team.cpp  hud_deathnotice.cpp
game/client/replay/: genericclassbased_replay.cpp
game/server/: ModelSoundsCache.cpp  ai_activity.cpp  ai_basehumanoid.cpp  ai_basenpc.cpp  ai_basenpc.h  ai_blended_movement.cpp  ai_concommands.cpp  ai_condition.h  ai_hull.cpp  ai_localnavigator.cpp  ai_moveshoot.cpp  ai_movesolver.cpp  ai_namespaces.h  ai_networkmanager.cpp  ai_networkmanager.h  ai_schedule.cpp  ai_schedule.h  base_gameinterface.cpp  baseanimating.cpp  baseanimating.h  basecombatcharacter.cpp  basecombatcharacter.h  basecombatweapon.cpp  baseentity.cpp  baseentity.h  basegrenade_contact.cpp  basemultiplayerplayer.h  client.cpp  doors.cpp  doors.h  effects.cpp  env_projectedtexture.cpp  explode.cpp  explode.h  func_break.cpp  func_break.h  game.cpp  gameinterface.cpp  globals.cpp  hltvdirector.h  (+32 more)
game/server/ges/: ent_capturearea.cpp  ge_armorvest.cpp  ge_bot.cpp  ge_bot.h  ge_client.cpp  ge_func_rebreakable.cpp  ge_func_rebreakable_surf.cpp  ge_gameinterface.cpp  ge_gameinterface.h  ge_gameplay.cpp  ge_gameplay.h  ge_gameplayinfo.cpp  ge_gameplayresource.cpp  ge_loadout.cpp  ge_loadout.h  ge_loadoutmanager.cpp  ge_loadoutmanager.h  ge_mapmanager.cpp  ge_mapmanager.h  ge_md5util.cpp  ge_player.cpp  ge_player.h  ge_recipientfilter.cpp  ge_recipientfilter.h  ge_stats_recorder.cpp  ge_stats_recorder.h  ge_tokenmanager.cpp  ge_tokenmanager.h  gebot_player.cpp  gebot_player.h  gemp_player.cpp  gemp_player.h  grenade_ge.cpp  grenade_ge.h  grenade_gebase.h  grenade_mine.cpp  grenade_mine.h  grenade_rocket.cpp  grenade_rocket.h  grenade_shell.cpp  (+3 more)
game/server/hl2/: extinguisherjet.cpp  grenade_ar2.h  grenade_homer.h  grenade_pathfollower.h  hl2_ai_network.cpp  hl2_client.cpp  hl2_gamestats.cpp  hl2_player.cpp  hl2_player.h  hl2_triggers.cpp  npc_crow.cpp  npc_playercompanion.cpp  npc_turret_floor.cpp
game/server/hl2mp/: grenade_tripmine.cpp  grenade_tripmine.h  hl2mp_bot_temp.cpp  hl2mp_bot_temp.h  hl2mp_client.cpp  hl2mp_gameinterface.cpp  hl2mp_player.cpp  hl2mp_player.h
game/shared/: SoundEmitterSystem.cpp  achievementmgr.cpp  achievementmgr.h  achievements_hlx.cpp  activitylist.cpp  ai_activity.h  ammodef.cpp  ammodef.h  baseachievement.cpp  baseachievement.h  basecombatcharacter_shared.cpp  basecombatweapon_shared.cpp  basecombatweapon_shared.h  baseentity_shared.cpp  basegrenade_shared.cpp  baseplayer_shared.cpp  baseviewmodel_shared.cpp  baseviewmodel_shared.h  cam_thirdperson.cpp  collisionproperty.cpp  decals.cpp  decals.h  eventlist.cpp  gamemovement.cpp  gamerules.cpp  gamerules.h  hintmessage.cpp  hintsystem.cpp  hintsystem.h  in_buttons.h  movevars_shared.cpp  multiplay_gamerules.cpp  particle_parse.cpp  predictable_entity.h  props_shared.h  ragdoll_shared.cpp  shareddefs.h  takedamageinfo.cpp  takedamageinfo.h  teamplay_gamerules.cpp  (+8 more)
game/shared/Multiplayer/: multiplayer_animstate.cpp  multiplayer_animstate.h
game/shared/ges/: b314_achievements.cpp  b3_achievements.cpp  b4_achievements.cpp  ge_achievement.cpp  ge_achievement.h  ge_achievement_defs.h  ge_achievements_b31.cpp  ge_achievements_b4.cpp  ge_achievements_v5.cpp  ge_bloodscreenvm.cpp  ge_bloodscreenvm.h  ge_character_data.cpp  ge_character_data.h  ge_game_timer.cpp  ge_game_timer.h  ge_gamerules.cpp  ge_gamerules.h  ge_generictoken.cpp  ge_generictoken.h  ge_player_shared.cpp  ge_player_shared.h  ge_shareddefs.h  ge_utils.cpp  ge_utils.h  ge_weapon.cpp  ge_weapon.h  ge_weapon_parse.cpp  ge_weapon_parse.h  ge_weaponautomatic.cpp  ge_weaponautomatic.h  ge_weaponmelee.cpp  ge_weaponmelee.h  ge_weaponpistol.cpp  ge_weaponpistol.h  ge_webrequest.cpp  ge_webrequest.h  gemp_gamerules.cpp  gemp_gamerules.h  gemp_player_shared.cpp  script_parser.cpp  (+26 more)
game/shared/hl2/: achievements_hl2.cpp  hl2_gamerules.cpp  (+1 more)
(+279 files in other folders)
